<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Filled"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="12dp"
                android:paddingHorizontal="12dp"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                tools:text="42" />

            <TextView
                android:id="@+id/subTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:paddingHorizontal="12dp"
                android:paddingBottom="12dp"
                android:paddingTop="4dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="fact about 42 asdf asdf asdf asdf sdaf asd fasd fsdf as fas dfsd f" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</FrameLayout>


