...
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/input_a_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_fact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_fact"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"/>

...
