<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_text_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background"
    android:gravity="center"
    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
    tools:text="FDSFSDF">

</TextView>